--- a/public/_locales/zh_TW/messages.json
+++ b/public/_locales/zh_TW/messages.json
@@ -1,17 +1,25 @@
 {
-  "extension_name": { "message": "擴充功能 - 名稱" },
-  "extension_description": { "message": "擴充功能 - 描述" },
-  "extension_action_title": { "message": "擴充功能 - 彈窗標題" },
-  "recommend": { "message": "推薦" },
-  "lang": { "message": "zh-tw" },
-  "__About": { "message": "\uD83C\uDF89 關於作者" },
-  "__About_Donate": { "message": "\uD83D\uDC95 鼓勵作者" },
-  "__About_Feedback": { "message": "\uD83E\uDD14 意見回饋" },
-  "__About_Help": { "message": "\uD83C\uDFB6 幫助文件" },
-  "__About_Recommend": { "message": "\uD83E\uDDF5 更多作品" },
-  "__UserInfo": { "message": "\uD83D\uDE0A 帳戶資訊" },
-  "__UserUnLogged": { "message": "\uD83D\uDE11 未登錄" },
-  "__Logout": { "message": "退出登錄" },
-  "__UpdateNotifyTitle": { "message": "版本更新" },
-  "__UpdateNotifyMessage": {"message": "\uD83C\uDF89 發生較大的版本更新，點擊查看"}
+  "extension_name":{"message":"查看密碼- ShowPassword"},
+  "extension_description":{"message":" 👀 讓你按兩下即可查看密碼框"},
+  "extension_action_title":{"message":"查看密碼- ShowPassword"},
+  "lang":{"message":"zh-tw"},
+  "recommend":{"message":"推薦"},
+  "__About":{"message":"\uD83C\uDF89關於作者"},
+  "__About_Donate":{"message":"\uD83D\uDC95鼓勵作者"},
+  "__About_Feedback":{"message":"\uD83E\uDD14意見回饋"},
+  "__About_Help":{"message":"\uD83C\uDFB6幫助文檔"},
+  "__About_Recommend":{"message":"\uD83E\uDDF5更多作品"},
+  "__UserInfo":{"message":"\uD83D\uDE0A帳戶資訊"},
+  "__UserUnLogged":{"message":"\uD83D\uDE11未登錄"},
+  "__Logout":{"message":"登出"},
+  "__UpdateNotifyTitle":{"message":"版本更新"},
+  "__UpdateNotifyMessage":{"message":"\uD83C\uDF89發生較大的版本更新,點擊查看"},
+  "doubleclick":{"message":"按兩下"},
+  "focusclick":{"message":"按一下"},
+  "keydownclick":{"message":"按鍵+點擊"},
+  "test_area":{"message":"測試區"},
+  "settings":{"message":"配寘"},
+  "trigger_type":{"message":"觸發管道"},
+  "change_ok":{"message":"操作成功"},
+  "keycode_group":{"message":"配合按鍵"}
 }
